[B]Version 1.1.8[/B]
- repo check
- import simpeljson
[B]Version 1.1.7[/B]
- fix for handling urls from another addon (fix domain name and proxy according to addon settings).
[B]Version 1.1.6[/B]
- fix for a small bug, when urlresolver return not valid url.
[B]Version 1.1.5[/B]
- move resolveurl for media url to play_video function instead of video_page function
- comment some code in video_page function that stack xbmc sometimes for a long time.
[B]Version 1.1.4[/B]
- fix for finding media_url part using no-proxy
[B]Version 1.1.3[/B]
- fix for finding media_url part
[B]Version 1.1.2[/B]
- HTML changes
- Changeable site-address (domain) (addon-settings)
- Uses with or without proxy  (addon-settings)
[B]Version 1.0.9[/B]
-small fix for resolve part 
[B]Version 1.0.7[/B]
- moved to more updated urlresolver (online)
-not showing links that cannot be played
[B]Version 1.0.6[/B]
- Update by o2ri
- HTML changes
- Uses a proxy
[B]Version 1.0.5[/B]
- Moved to deniro.me
- URL Unquote the movie name on the video sources page
[B]Version 1.0.3[/B]
- Fix for next page (website html update)
- Fix for categories not displaying dubbed films and imdb recommended 
[B]Version 1.0.2[/B]
- Small change due to a website HTML update
[B]Version 1.0.1[/B]
- Added support for VideoSlasher
- Fixed MovieX-IL dependency issue
[B]Version 1.0.0[/B]
- Initial release