@@ -20,10 +20,11 @@
     </extension>
  </addon>
 
-<addon id="plugin.video.gozlan.me" name="gozlan.me" version="1.1.8" provider-name="cubicle">
+<addon id="plugin.video.gozlan.me" name="gozlan.me" version="1.1.9" provider-name="cubicle">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
-        <import addon="script.module.urlresolver" version="1.0.0"/>
+        <import addon="script.module.urlresolver"/>
+        <import addon="script.module.t0mm0.common"/>
         <import addon="script.module.simplejson" />
     </requires>
     <extension point="xbmc.python.pluginsource" library="gozlan.py">
